--- a/index.css
+++ b/index.css
@@ -73,7 +73,7 @@ nav{
     text-align: left;
     color:white;
     font-size: 2.5rem;
-    padding-top: 2%;
+    /* padding-top: 2%; */
 }
 .hero-container{
     height:420px;
@@ -129,4 +129,35 @@ nav{
     cursor: pointer;
     margin-top: 5px;
 }
-
+.filter_class{
+    position: relative;
+    width:fit-content;
+    cursor: pointer;
+    padding:10px;
+    border-radius: 1rem;
+    font-size: 2rem;
+    font-weight: bold;
+    color:white;
+    background-color: black;
+    border:2px solid blueviolet;
+}
+#filter{
+    top:27%;
+    position: relative;
+    display: flex;
+    width:50%;
+    left:25%;
+    justify-content: space-around;
+}
+.filter_class a{
+    text-decoration: none;
+    color:white;
+}
+#loading{
+    font-size: 2rem;
+    color: white;
+    visibility: hidden;
+    position: fixed;
+    top:0%;
+    left:90%;
+}
